--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,20 @@
 
-# Site settings
+# 站点设置
 title: weiwei.blog
 brief-intro: haojixing buru lanbitou
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://weiweiok.github.io" # the base hostname & protocol for your site
+permalink: /:year/:month/:day/:title/
+
+# Markdown 渲染引擎设置
+markdown: kramdown
+kramdown:
+input: GFM
+syntax_highlighter: rouge
+
+# 摘要分隔符设置
+excerpt_separator: "\n\n\n\n"
+
+# 分页设置
+gems: [jekyll-paginate]
+paginate: 6
