--- a/_config.yml
+++ b/_config.yml
@@ -31,3 +31,4 @@ excerpt_separator: "\n\n\n\n"
 # 分页设置
 gems: [jekyll-paginate]
 paginate: 5
+paginatepath: ['/page:num','/php/page:num','/js/page:num']
